# RS

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
architecture/: recsys_architecture_v1.puml
auth/: Dockerfile  example.env-db  example.env-flask  requirements-tests.txt  requirements.txt
auth/auth_api/: app.py  extensions.py  manage.py
auth/tests/: conftest.py  factories.py  test_user.py
etl/: Dockerfile  example.env  requirements.txt
etl/ps_to_es/: es_utils.py  log_utils.py  main.py  pg_utils.py  state.py
event_generator/: __main__.py  example.env  interface.py  models.py
event_generator/db/: __init__.py
movies_admin/: Dockerfile  example.env  requirements.txt
movies_admin/config/: settings.py
movies_admin/movies/: admin.py  models.py
movies_db/: example.env
movies_db/sql_scripts/: schema.sql
nginx/: nginx.conf
nginx/conf.d/: site.conf
rs/: Dockerfile  cache.py  config.py  example.rs_env  getter.py  loader.py  ml_model.py  models.py  preparer.py  requirements.txt  tasks.py
rs/indexes/: movies.json
rs_api/: Dockerfile  example.env  pyproject.toml  requirements.txt
rs_api/src/: main.py
rs_api/src/api/: __init__.py
rs_api/src/api/v1/: __init__.py  rs_movies.py
rs_api/src/core/: config.py
rs_api/src/db/: elastic.py
rs_api/src/models/: rs_models.py
rs_db/: example.env
schema_design/: db_schema.sql
search_api/: Dockerfile  requirements.txt
sqlite_to_postgres/: .dockerignore  Dockerfile  example.env  load_data.py  postgres_saver.py  schemes.py  sqlite_loader.py
ugc/: Dockerfile  example.env  requirements.txt
ugc/etl/: config.py  (+2 more)
(+103 files in other folders)
