[tool.poetry]
name = "rs_api"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
aiohttp = "^3.8.1"
backoff = "^2.1.0"
pydantic = "^1.9.1"
uvicorn = "^0.17.6"
elasticsearch = "^8.2.2"
jose = "^1.0.0"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
